# dgg4

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  README.md  setup.cfg
include/: actioninitialization.hpp  basegeometry.hpp  detectorconstruction.hpp  eventaction.hpp  ex1geometry.hpp  ex3geometry.hpp  geometrymessenger.hpp  hit.hpp  pga.hpp  run.hpp  runaction.hpp  runmessenger.hpp  sensitivedetector.hpp  world.hpp
macros/: init_vis.mac  vis.mac
src/: actioninitialization.cpp  detectorconstruction.cpp  eventaction.cpp  ex1geometry.cpp  ex3geometry.cpp  geometrymessenger.cpp  hit.cpp  main.cpp  pga.cpp  run.cpp  runaction.cpp  runmessenger.cpp  sensitivedetector.cpp  world.cpp
